--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -2,8 +2,26 @@
   <h2>Hive Sections for Hive</h2>
   <table class="table table-nonfluid">
     <thead>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Code</th>
+        <th scope="col">IsDeleted</th>
+        <th scope="col"></th>
     </thead>
     <tbody>
+        <tr *ngFor="let hiveSection of hiveSections">
+            <th scope="row">{{hiveSection.id}}</th>
+            <td>{{hiveSection.name}}</td>
+            <td>{{hiveSection.code}}</td>
+            <td>{{hiveSection.isDeleted}}</td>
+            <td>
+                <span class="btn-toolbar" role="toolbar" aria-label="Hive action buttons" style="display: block; white-space:nowrap;">
+                  <div class="btn-group" role="group" aria-label="Edit group">
+                    <button routerLink="/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
+                  </div>
+                </span>
+            </td>
+        </tr>
     </tbody>
   </table>
   <div class="btn-toolbar" role="toolbar" aria-label="Action buttons">
@@ -12,7 +30,6 @@
     </div>
     <div class="btn-group" role="group" aria-label="Add group">
       <button routerLink="/hive/{{this.hiveId}}" type="button" class="btn btn-primary">Add hive section</button>
-    </div>
   </div>
 </div>
 
