--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -16,9 +16,15 @@
             <td>{{hiveSection.isDeleted}}</td>
             <td>
                 <span class="btn-toolbar" role="toolbar" aria-label="Hive action buttons" style="display: block; white-space:nowrap;">
-                  <div class="btn-group" role="group" aria-label="Edit group">
-                    <button routerLink="/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
-                  </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Delete group"  *ngIf="!hiveSection.isDeleted" (click)="onDelete(hiveSection.id)">
+                        <button type="button" class="btn btn-danger ">Delete</button>
+                    </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Undelete group"  *ngIf="hiveSection.isDeleted" (click)="onUnDelete(hiveSection.id)">
+                      <button type="button" class="btn btn-primary">Undelete</button>
+                    </div>
+                    <div class="btn-group" role="group" aria-label="Edit group">
+                        <button routerLink="/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
+                      </div>
                 </span>
             </td>
         </tr>
