--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -23,7 +23,7 @@
                       <button type="button" class="btn btn-primary">Undelete</button>
                     </div>
                     <div class="btn-group" role="group" aria-label="Edit group">
-                        <button routerLink="/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
+                        <button routerLink="/hive/{{hiveId}}/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
                       </div>
                 </span>
             </td>
@@ -35,7 +35,7 @@
       <button routerLink="/hives" type="button" class="btn btn-primary">Back</button>
     </div>
     <div class="btn-group" role="group" aria-label="Add group">
-      <button routerLink="/hive/{{this.hiveId}}" type="button" class="btn btn-primary">Add hive section</button>
+      <button routerLink="/hive/{{hiveId}}/section" type="button" class="btn btn-primary">Add hive section</button>
   </div>
 </div>
 
