--- a/KatlaSportNg/src/app/hive-management/forms/hive-section-form.component.html
+++ b/KatlaSportNg/src/app/hive-management/forms/hive-section-form.component.html
@@ -33,8 +33,8 @@
       <div class="btn-group mr-1" role="group" aria-label="Cancel group">
         <button type="button" class="btn btn-primary" (click)="onCancel()">Back</button>
       </div>
-      <div class="btn-group mr-4" role="group" aria-label="Save group">
-        <button type="submit" class="btn btn-primary">Save</button>
+      <div class="btn-group mr-4" role="group"  aria-label="Save group">
+        <button type="submit" class="btn btn-primary" *ngIf="hiveSectionForm.valid">Save</button>
       </div>
       <div class="btn-group mr-1" role="group" aria-label="Delete group" *ngIf="existed && !hiveSection.isDeleted">
         <button type="button" class="btn btn-warning" (click)="onDelete()">Delete</button>
